update the universe so that units(time and length) should be configured in the universe actor

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ CelestialBody.VC.VC.opendb
 CelestialBody.VC.db
 CelestialBody.sln
 DerivedDataCache/
+.vs/CelestialBody/v14/.suo
+CelestialBody.opensdf
+CelestialBody.sdf
